# mini-deux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mini/: ansi.py  append_buffer.py  config.py  editor.py  highlight.py  keyboard.py  main.py  terminal.py  themes.py  types.py
tests/: conftest.py  test_editor.py  test_highlight.py  test_themes.py
