[project]
name = "mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.32.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
mini = "mini.main:main"
