[project]
name = "mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.32.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-typescript>=0.23.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mini = "mini.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
